# Emu4VitaPlus

./: .gitmodules  CMakeLists.txt  GRAPHICS.md  README.en.md  README.md
apps/: CMakeLists.txt  core.cpp  core.yml
apps/atari800/: CMakeLists.txt
apps/bluemsx/: CMakeLists.txt
apps/chimerasnes/: CMakeLists.txt
apps/crocods/: Makefile  libretro.c
apps/fba_lite/: makefile.libretro
apps/fbalpha2012/: makefile.libretro
apps/fbneo/: CMakeLists.txt  Makefile  Makefile.common
apps/fbneo_xtreme/: Makefile
apps/fmsx/: CMakeLists.txt
apps/fuse/: CMakeLists.txt
apps/gpsp/: CMakeLists.txt
apps/hatari/: CMakeLists.txt
apps/km_fbneo_xtreme_amped/: CMakeLists.txt  Makefile  Makefile.common
apps/km_mame2003_xtreme_amped/: CMakeLists.txt
apps/mame2003/: CMakeLists.txt  Makefile
apps/mame2003_plus/: CMakeLists.txt  Makefile
apps/mame2003_xtreme/: CMakeLists.txt  Makefile
apps/mednafen_pce_fast/: Makefile
apps/mednafen_supafaust/: CMakeLists.txt
apps/mednafen_supergrafx/: Makefile
apps/mednafen_wswan/: CMakeLists.txt
apps/mgba/: Makefile.libretro
apps/nekop2/: CMakeLists.txt
apps/neocd/: CMakeLists.txt
apps/np2kai/: CMakeLists.txt
apps/parallel_n64/: Makefile  Makefile.common
apps/pcsx_rearmed/: Makefile.libretro
apps/picodrive/: Makefile.libretro
apps/px68k/: CMakeLists.txt
apps/snes9x/: Makefile
apps/snes9x2005/: CMakeLists.txt
apps/snes9x2005_plus/: CMakeLists.txt
apps/stella2014/: CMakeLists.txt
apps/tgbdual/: CMakeLists.txt
apps/tgbdual/pkg/assets/: names.en.zdb
apps/uae4arm/: CMakeLists.txt  Makefile  Makefile.common
apps/vba_next/: Makefile.libretro
apps/vecx/: CMakeLists.txt
apps/vice/: CMakeLists.txt
arch/: CMakeLists.txt
arch/source/: app.cpp  app.h  config.cpp  config.h  core_button.cpp  core_button.h  defines.cpp  defines.h  main.cpp  time_scale.cpp  time_scale.h
cmake/: arcade_dat.cmake  collect_files.cmake  cores.cmake
cores/: CMakeLists.txt  core.c  core.cpp  core.h  core.yml  exports.yml  sbrk.c
frontend/: CMakeLists.txt
frontend/source/: app.cpp  app.h  app_status.h  bios_checker.cpp  cheat.cpp  cheat.h  circle_buf.h  config.cpp  config.h  config_types.h  core_options.cpp  cores.cpp  cores.h  crc32_cache.h  device_options.cpp  device_options.h  directory.cpp  directory.h  favorite.cpp  favorite.h  global.cpp  global.h  language_string.cpp  language_string.h  main.cpp  network.cpp  network.h  overlay.cpp  overlay.h  precomp.cpp  precomp.h  ra_lpl.cpp  ra_lpl.h  retro_achievements.cpp  retro_achievements.h  retro_module.cpp  retro_module.h  rom_name.cpp  rom_name.h  rzip.cpp  (+14 more)
frontend/source/audio/: audio.cpp  audio.h  audio_define.h  audio_output.cpp  audio_output.h  audio_resampler.cpp  audio_resampler.h
frontend/source/core_spec/: arcade_manager.cpp  bios_checker.cpp  bios_checker.h  core_spec.cpp  defines.cpp  defines.h  hw_render.cpp  hw_render.h  input_descriptor.cpp  input_descriptor.h  retro_achievements.cpp  retro_achievements.h
frontend/source/emu/: cache_manager.h  callbacks.cpp  disk_contorl.h  disk_control.cpp  disk_control.h  emulator.cpp  emulator.h  fps.cpp  fps.h  input.cpp  input_thread.cpp  input_thread.h  keyboard.cpp  keyboard.h  precomp.cpp  precomp.h  rewind.cpp  rewind.h  texture_buf.h  video.cpp
frontend/source/emu/audio/: audio.cpp  audio.h  audio_define.h  audio_output.cpp  audio_output.h  audio_resampler.cpp
frontend/source/emu/video/: texture_buf.h  video.cpp  video.h
frontend/source/retro_achievements/: achievement.cpp  achievement.h  events.cpp  notification.cpp  notification.h  retro_achievements.cpp  retro_achievements.h  retro_memory.cpp  retro_memory.h  texture_cache.cpp  texture_cache.h
frontend/source/ui/: boot.cpp  boot.h  creator.cpp  dialog.cpp  dialog.h  gamepad.cpp  gamepad.h  hint.cpp  hint.h  item_achievement.cpp  item_achievement.h  item_base.h  item_config.cpp  item_config.h  item_control.h  item_core.h  item_disk.cpp  item_disk.h  item_hotkey.h  item_selectable.cpp  item_state.cpp  misc.cpp  misc.h  tab_about.cpp  tab_base.cpp  tab_base.h  tab_browser.cpp  tab_browser.h  tab_control.h  tab_disk.cpp  tab_disk.h  tab_favorite.cpp  tab_favorite.h  tab_selectable.cpp  tab_selectable.h  ui.cpp  ui.h  ui_hint.cpp  ui_hint.h
frontend/source/ui/items/: item_achievement.cpp  item_achievement.h  item_base.h  item_control.h  item_core.h  item_disk.cpp  item_hotkey.h  item_selectable.cpp  item_selectable.h  item_state.h  item_theme.h
frontend/source/ui/tabs/: tab_about.cpp  tab_about.h  tab_browser.cpp  tab_browser.h  tab_disk.cpp  tab_favorite.cpp  tab_favorite.h  tab_selectable.cpp  tab_selectable.h
script/: apply_filters.py  arc_dat.py  arcade_dat.cmake  arch.json  arch_bg.xcf  baseio.py  bg.xcf  compile_shaders.py  cores.py  dump_theme.py  export.py  export_arch.py  export_frontend.py  export_share.py  gen_arch_cover.py  gen_arch_img.py  gen_livearea.py  gen_namedb.py  grab_arc_dat.py  language.json  language.py  reduce_ttf_size.py  to_execl.py  to_json.py  trans.py  translation.json
script/rom_db/: atari2600.names.json  atari5200.names.json  gw.names.json  (+9 more)
share/: CMakeLists.txt
share/pkg/assets/: themes.json
share/pkg/assets/overlays/: overlays.ini
share/pkg/assets/shaders/: crt-easymode_f.gxp  crt-easymode_v.gxp  crt-gdv-mini_f.gxp  crt-gdv-mini_v.gxp  crt-lottes-fast_f.gxp  crt-lottes-fast_v.gxp  crt-lottes_f.gxp  crt-lottes_v.gxp  crt-mattias_f.gxp  crt-mattias_v.gxp  gb-palette-dmg_f.gxp  gb-palette-dmg_v.gxp  gb-palette-light_f.gxp  gb-palette-light_v.gxp  gb-palette-pocket_f.gxp  gb-palette-pocket_v.gxp  gb-palette_f.gxp  gb-palette_v.gxp  gba-color+lcd3x_f.gxp  gba-color+lcd3x_v.gxp  lcd3x_f.gxp  lcd3x_v.gxp  shaders.ini
share/source/: archive_reader_7z.cpp  archive_reader_7z.h  cyrillic.i  delay.h  file.cpp  file.h  gb2312.i  icons.h  input.cpp  input.h  locker.h  log.cpp  log.h  motion_sensor.cpp  motion_sensor.h  my_imgui.cpp  my_imgui.h  network.cpp  network.h  profiler.cpp  profiler.h  semaphore.h  singleton.h  theme.cpp  theme.h  thread_base.cpp  thread_base.h  touch.cpp  touch.h  utf16_to_gb2312.inc  utils.cpp  utils.h
(+14 files in other folders)
