cmake_minimum_required(VERSION 3.12)

set(CORE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${CORE_DIR})
set(CORE_MAKEFILE_NAME Makefile)
set(CORE_ARGS platform=vita EXTERNAL_ZLIB=1)
set(LIBRETRO_LIBRARY "")

if(CORE STREQUAL "gpsp")
elseif(CORE STREQUAL "vba_next")
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile.libretro)
elseif(CORE STREQUAL "gambatte")
    set(CORE_MAKEFILE_NAME Makefile.libretro)
elseif(CORE STREQUAL "fba_lite")
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/makefile.libretro)
    set(CORE_ARGS ${CORE_ARGS} HAVE_NEON=1)
elseif(CORE STREQUAL "fbneo")
    set(CORE_DIR ${CORE_DIR}/src/burner/libretro)
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/makefile)
    set(CORE_ARGS ${CORE_ARGS} STATIC_LINKING=1)
elseif(CORE STREQUAL "fbalpha2012")
    set(CORE_DIR ${CORE_DIR}/svn-current/trunk)
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/makefile.libretro)
elseif(CORE STREQUAL "snes9x2002")
elseif(CORE STREQUAL "snes9x2005_plus")
    set(CORE_ARGS ${CORE_ARGS} USE_BLARGG_APU=1)
elseif(CORE STREQUAL "snes9x2010")
elseif(CORE STREQUAL "fceumm")
elseif(CORE STREQUAL "nestopia")
    set(CORE_DIR ${CORE_DIR}/libretro)
elseif(CORE STREQUAL "genesis_plus_gx")
    set(CORE_MAKEFILE_NAME Makefile.libretro)
elseif(CORE STREQUAL "genesis_plus_gx_wide")
    set(CORE_MAKEFILE_NAME Makefile.libretro)
elseif(CORE STREQUAL "picodrive")
    set(CORE_MAKEFILE_NAME Makefile.libretro)
    set(CORE_ARGS ${CORE_ARGS} PLATFORM_ZLIB=0 use_libchdr=1)
elseif(CORE STREQUAL "mednafen_pce_fast")
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
    set(CORE_ARGS ${CORE_ARGS} SYSTEM_ZLIB=1)
elseif(CORE STREQUAL "mednafen_supergrafx")
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
    set(CORE_ARGS ${CORE_ARGS} SYSTEM_ZLIB=1)
elseif(CORE STREQUAL "mednafen_ngp")
elseif(CORE STREQUAL "mednafen_wswan")
elseif(CORE STREQUAL "pcsx_rearmed")
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile.libretro)
    set(CORE_ARGS ${CORE_ARGS} DYNAREC=ari64)
elseif(CORE STREQUAL "stella2014")
elseif(CORE STREQUAL "prosystem")
elseif(CORE STREQUAL "atari800")
    set(CORE_ARGS ${CORE_ARGS} SYSTEM_ZLIB=1)
elseif(CORE STREQUAL "dosbox_pure")
elseif(CORE STREQUAL "mame2000")
elseif(CORE STREQUAL "mame2003_plus")
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
    set(CORE_ARGS ${CORE_ARGS} SPLIT_UP_LINK=1)
elseif(CORE STREQUAL "mame2003")
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
    set(CORE_ARGS ${CORE_ARGS} SPLIT_UP_LINK=1)
elseif(CORE STREQUAL "vecx")
elseif(CORE STREQUAL "uae4arm")
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
elseif(CORE STREQUAL "fuse")
elseif(CORE STREQUAL "neocd")
elseif(CORE STREQUAL "mednafen_supafaust")
    set(CORE_ARGS ${CORE_ARGS} USE_BLARGG_APU=1)
elseif(CORE STREQUAL "km_fbneo_xtreme_amped")
    # https://github.com/noword/Emu4VitaPlus/issues/17#issuecomment-2599572046
    # should fix it manually
    # src/burner/libretro/libretro.cpp line 211
    # src/burner/libretro/libretro-common/include/string/stdstring.h line 162
    set(CORE_DIR ${CORE_DIR}/src/burner/libretro)
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
    set(CORE_ARGS ${CORE_ARGS} STATIC_LINKING=1)
elseif(CORE STREQUAL "km_mame2003_xtreme_amped")
    set(CORE_ARGS ${CORE_ARGS} SPLIT_UP_LINK=1)
elseif(CORE STREQUAL "chimerasnes")
    set(CORE_ARGS ${CORE_ARGS} USE_BLARGG_APU=1)
elseif(CORE STREQUAL "tgbdual")
elseif(CORE STREQUAL "nekop2")
    set(CORE_DIR ${CORE_DIR}/libretro)
    set(CORE_MAKEFILE_NAME Makefile.libretro)
elseif(CORE STREQUAL "fmsx")
elseif(CORE STREQUAL "bluemsx")
    set(CORE_MAKEFILE_NAME Makefile.libretro)
elseif(CORE STREQUAL "np2kai")
    set(CORE_DIR ${CORE_DIR}/sdl)
    set(CORE_MAKEFILE_NAME Makefile.libretro)
elseif(CORE STREQUAL "vice")
    set(LIBRETRO_LIBRARY ${CORE_DIR}/vice_x64_libretro_vita.a CACHE INTERNAL "LIBRETRO_LIBRARY")
elseif(CORE STREQUAL "px68k")
    set(CORE_MAKEFILE_NAME Makefile.libretro)
elseif(CORE STREQUAL "mednafen_lynx")
elseif(CORE STREQUAL "handy")
elseif(CORE STREQUAL "cap32")
elseif(CORE STREQUAL "crocods")
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
elseif(CORE STREQUAL "snes9x")
    set(CORE_DIR ${CORE_DIR}/libretro)
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile)
elseif(CORE STREQUAL "mgba")
    set(CORE_MAKEFILE_NAME ${CMAKE_CURRENT_SOURCE_DIR}/../apps/${CORE}/Makefile.libretro)
else()
    message(FATAL_ERROR "unknown core: " ${CORE})
endif()

if(NOT LIBRETRO_LIBRARY)
    set(LIBRETRO_LIBRARY ${CORE_DIR}/${CORE}_libretro_vita.a CACHE INTERNAL "LIBRETRO_LIBRARY")
endif()

include(ProcessorCount)
ProcessorCount(n)

if(n GREATER 2)
    math(EXPR n "${n}-1")
    set(MAKE_FLAG "-j${n}")
endif()

set(CORE_TAG ${CORE}_build CACHE INTERNAL "CORE_TAG")
add_custom_target(
    ${CORE_TAG} ALL
    COMMAND make -f ${CORE_MAKEFILE_NAME} ${CORE_ARGS} ${MAKE_FLAG}
    WORKING_DIRECTORY ${CORE_DIR})

add_library(${CORE} STATIC IMPORTED)
set_property(
    TARGET ${CORE}
    APPEND
    PROPERTY IMPORTED_CONFIGURATIONS NOCONFIG)

add_dependencies(${CORE} ${CORE_TAG})
set_target_properties(${CORE} PROPERTIES IMPORTED_LOCATION "${LIBRETRO_LIBRARY}")
